tests/src/frontend/syntax/invalid/name_collision_3.sk
type Listy = Int;
class Listy{}
